[project]
name = "papis-bbt-formatter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Marty Oehme", email = "contact@martyoeh.me" }]
requires-python = ">=3.11"
dependencies = ["papis>=0.14"]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[project.entry-points."papis.format"]
bbt = "papis_bbt_formatter:BBTFormatter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
